# DatabaseParcer

./: .gitignore  CMakeLists.txt  Database.csv  LAB_2_OOP.pro  LAB_2_OOP.pro.user.48e9cae  README.md  abstractreader.h  csvexception.cpp  csvexception.h  csvreader.cpp  csvreader.h  csvwriter.cpp  csvwriter.h  database.json  films.cpp  films.h  jsonreader.cpp  jsonreader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mytextbrowser.h  vehicle.cpp  vehicle.h  vehicle_color.h
CSV/: csvreader.cpp  csvreader.h  csvwriter.cpp  csvwriter.h
Databases/: KeoFoxy_animes.json  database.json  databaseoutput.csv
JSON/: jsonreader.cpp  jsonreader.h
UI/: customtextbrowser.cpp  customtextbrowser.h
Utils/: abstractreader.cpp  abstractreader.h
